--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+*.json
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -60,3 +62,10 @@ target/
 
 #Ipython Notebook
 .ipynb_checkpoints
+prefix_suffix.json
+
+
+
+
+
+
